kubernetes/blue_green_deploy/deploy_mount_blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      env: blue
  template:
    metadata:
      labels:
        app: nginx
        env: blue
    spec:
      containers:
      - name: nginx-container
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "256Mi"  # Maximum memory allowed
            cpu: "200m"       # Maximum CPU allowed (200 milliCPU)
          requests:
            memory: "128Mi"  # Initial memory request
            cpu: "100m"       # Initial CPU request
        volumeMounts:
        - name: pv-claim-blue
          mountPath: "/usr/share/nginx/html/"
      volumes:
      - name: pv-claim-blue
        persistentVolumeClaim:
          claimName: pv-claim-blue
