kubernetes/blue_green_deploy/service-clusterIp.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
spec:
  selector:
    app: nginx
    env: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
