kubernetes/blue_green_deploy/service_create_nodeport-nginix.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  ports:
    - nodePort: 32000
      port: 80
      targetPort: 80
  selector:
    app: nginx
    env: green
